syntax = "proto3";

option csharp_namespace = "RTSharp.Auxiliary.Protocols";

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service GRPCFilesService {
    rpc GetDirectoryInfo (google.protobuf.StringValue) returns (FileSystemItem);
    rpc CreateDirectory (google.protobuf.StringValue) returns (google.protobuf.Empty);
    rpc RemoveEmptyDirectory (google.protobuf.StringValue) returns (google.protobuf.Empty);
    rpc MediaInfo (MediaInfoInput) returns (MediaInfoReply);
    rpc CheckExists (CheckExistsInput) returns (CheckExistsReply);

    rpc CancelFileTransfer (FileTransferSession) returns (google.protobuf.Empty);
    rpc ReceiveFilesFromRemote (ReceiveFilesFromRemoteInput) returns (FileTransferSession);
    rpc ReceiveFiles (ReceiveFilesInput) returns (stream FileBuffer);

    rpc FileTransferSessionsProgress (google.protobuf.Empty) returns (stream FileTransferSessionProgress);
}

message FileTransferSession {
    string SessionId = 1;
}

message FileTransferSessionProgress {
    string SessionId = 1;
    bool Sender = 2;
    string TargetUrl = 3;
    google.protobuf.StringValue File = 4;
    uint64 BytesReceived = 5;
}

message ReceiveFilesFromRemoteInput {
    string TargetUrl = 1;
    repeated string StorePaths = 2;
    repeated string RemoteSourcePaths = 3;
}

message ReceiveFilesInput {
    repeated string Paths = 1;
    string SessionId = 2;
}

message FileBuffer {
    oneof Data {
        string Path = 1;
        bytes Buffer = 2;
    }
}

message CheckExistsInput {
    repeated string Paths = 1;
}

message CheckExistsReply {
    map<string, bool> Existence = 1;
}

message MediaInfoInput {
    repeated string Paths = 1;
}

message MediaInfoReply {
    repeated string Output = 1;
}

message FileSystemItem {
    repeated FileSystemItem Children = 1;
    bool Directory = 2;
    string Path = 3;
    uint64 Size = 4;
    google.protobuf.Timestamp LastModified = 5;
    string Permissions = 6;
}